@@ -1,5 +1,10 @@
 2006-01-12  Julien Puydt  <jpuydt@free.fr>
 
+	* src/gui/statusicon.cpp: Stop blinking the message icon once we have
+	shown the chat window.
+
+2006-01-12  Julien Puydt  <jpuydt@free.fr>
+
 	* src/gui/statusicon.h, src/gui/statusicon.cpp: Actually commit the
 	files in cvs... I'm such a fool. :-(
 
